<resources>
    <string name="app_name">Task Ketchum</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_date_picker">Fecha</string>
    <string name="txt_fecha">__-__-____</string>
    <string name="usuario">Usuario</string>
    <string name="login">Log in</string>
    <string name="ingresar">Ingresar</string>
    <string name="action_add">add</string>
    <string name="btn_update">Actualizar</string>
    <string name="et_title">Titulo</string>
    <string name="action_delete">Delete</string>
    <string name="yes">Si</string>
    <string name="cancel">Cancelar</string>
</resources>